# nmpde-project5-Kamaneh-Raganato-Terrana

./: .gitignore  CMakeLists.txt  Data Profile.xml  Formulation.md  README.md  results.txt
common/: cmake-common.cmake
input/: 3dbrain.prm  center.prm  right-center.prm  test1.prm  test1D_convergence.prm  test2D_convergence.prm  test3D_convergence.prm
input/diffusion/: center.prm
mesh/: .brain 2.geo.icloud  .brain-h3.0 2.msh.icloud  .brain-h3.0.msh.icloud  .brain-h3.0.stl.icloud  .brain-h3.0_diretta.msh.icloud  .brain-h3.0_surface 2.msh.icloud  .brain-h3.0_surface 2.stl.icloud  .brain-h3.0_surface2D 2.msh.icloud  .brain-h3.0_surface2D 2.stl.icloud  .brain.msh.icloud  .brain_3.msh.icloud  .brain_benchmark 2.geo.icloud  .brain_benchmark 2.msh.icloud  .ellipse4.msh.icloud  .ellipse5.msh.icloud  .mesh-cube-10 2.msh.icloud  .mesh-cube-40.msh.icloud  .mesh-cube-5 2.msh.icloud  .mesh-square-10 2.msh.icloud  .mesh-square-30 2.geo.icloud  .mesh-square-5 2.msh.icloud  .mesh-square-h0.045000 2.msh.icloud  .mesh-square-h0.085000 2.msh.icloud  .mesh-square-h0.150000 2.msh.icloud  .mesh-square-h0.275000 2.msh.icloud  brain 2.geo  brain-h3.0.msh  brain-h3.0.stl  brain-h3.0.stl:Zone.Identifier  brain-h3.0_surface 2.stl  brain-h3.0_surface.msh  brain-h3.0_surface2D.msh  brain-h3.0_surface2D.stl  brain.geo  brain_benchmark 2.msh  ellipse.msh  ellipse1.msh  ellipse2.msh  ellipse3.msh  ellipse4.msh  (+7 more)
results/: convergence2D.csv  convergence2D_T=1e-3_deltat=1e-5_r=2.csv  convergence2D_T=1e-4_deltat=1e-6_r=1.csv  convergence2D_T=1e-4_deltat=1e-6_r=2.csv  convergence2D_T=1e-5_deltat=1e-7_r=1.csv  convergence2D_T=1e-5_deltat=1e-7_r=2.csv  convergence2D_T=1e-6_deltat=1e-8_r=2.csv  state_spreading1D.pvsm
script/: script1.sub
scripts/: convert_stl_to_msh.geo  ellipse.geo  mesh-square.geo  script1.sub
src/: FisherKolmogorov.cpp  FisherKolmogorov.hpp  FisherKolmogorov1D.cpp  FisherKolmogorov1D.hpp  FisherKolmogorov1D_convergence.cpp  FisherKolmogorov1D_convergence.hpp  FisherKolmogorov2D.cpp  FisherKolmogorov2D.hpp  FisherKolmogorov3D.cpp  FisherKolmogorov3D.hpp  Fisher_Kolmogorov_solver.cpp  Fisher_Kolmogorov_solver.hpp  Fisher_Kolmogorov_solver_convergence.cpp  Fisher_Kolmogorov_solver_convergence.hpp  convergence.hpp  draft  main.cpp  neurodegeneration_models.cpp  neurodegeneration_models.hpp  test1D.cpp  test1D_B.cpp  test1D_C.cpp  test1D_convergence.cpp  test2D.cpp  test2D_B.cpp  test2D_convergence.cpp  test3D.cpp  test3D_B.cpp  test3D_C.cpp  test3D_convergence.cpp
(+3 files in other folders)
